appId: com.max.heymax
---
- tapOn: "HeyMax"
- waitForAnimationToEnd
- tapOn: "Dine out"
- repeat:
    while:
      notVisible: "International"
    commands:
      - swipe:
          start: "90%,27%"
          end: "55%,27%"
- tapOn:
    text: "International"
    index: 1

- repeat:
    while:
      notVisible: "French French"
    commands:
      - swipe:
          start: "90%,27%"
          end: "55%,27%"
- tapOn: "French French"