appId: com.heymax.app
---
# **Scenario 1: Sign Up with a New Email**
- tapOn: "HeyMax"
- assertVisible: "Sign Up"
- tapOn: "Sign Up"
- tapOn: "Email"
- longPressOn: "Email"
- eraseText
- inputText: "balatester@gmail.com"
- assertVisible: "balatester@gmail.com"
- tapOn: "Password"
- eraseText
- inputText: "bala02aadhi@18"
- tapOn: "Confirm Password"
- eraseText
- inputText: "bala02aadhi@18"
- waitForAnimationToEnd
- tapOn: "Sign Up"
- waitForAnimationToEnd
- tapOn:
    point: "50%,56%"
- runFlow:
    when:
      visible: "Save"
    commands:
      - tapOn: "Save"
- runFlow:
    when:
      visible: "Proceed to Singapore Site"
    commands:
      - tapOn: "Proceed to Singapore Site"

- runFlow:
    when:
      visible: "See how it works"
    commands:
      - tapOn: "See how it works"
- runFlow:
    when:
      visible: "89%,93%"
    commands:
      - tapOn:
          point: "89%,93%"
- runFlow:
    when:
      visible: "Get Started"
    commands:
      - tapOn: "Get Started"
# **Handle "Save and Continue" or "Save" If Present**
- runFlow:
    when:
      visible: "Maybe Later"
    commands:
      - tapOn: "Maybe Later"
- tapOn: ""
# **Scroll to Log out and Tap**
- scrollUntilVisible:
    direction: DOWN
    element:
      text: "Log out"
    speed: 50
    timeout: 10000

- tapOn: "Log out"
- runFlow:
    when:
      visible: "Log Out"
    commands:
      - tapOn: "Log Out"

# **Exit App**
- pressKey: HOME
- waitForAnimationToEnd

# **Repeat Sign-Up Flow for Another Test**
- tapOn: "HeyMax"
- assertVisible: "Sign Up"
- tapOn: 60%,30%
- tapOn: "Email"
- eraseText
- inputText: "balapreethi2002@gmail.com"
- assertVisible: "balapreethi2002@gmail.com"

- tapOn: "Password"
- eraseText
- inputText: "user@123"
- assertVisible: "••••••••"

- tapOn: "Confirm Password"
- eraseText
- inputText: "user@123"
- assertVisible: "••••••••"

- waitForAnimationToEnd
- assertVisible: "Sign Up"
- assertNotVisible: "Sign Up (disabled)"
- tapOn: "Sign Up"

# **Handle Sign-up Failure**
- runFlow:
    when:
      visible: "Sign up failed, Please try again!"
    commands:
      - pressKey: HOME
      - waitForAnimationToEnd

# **Sign Up with Non-Matching Passwords**
- tapOn: "HeyMax"
- tapOn: 60%,30%
- tapOn: "Email"
- eraseText
- inputText: "heymaxtest009@gmail.com"
- assertVisible: "heymaxtest009@gmail.com"

- tapOn: "Password"
- eraseText
- inputText: "heymaxtest"
- assertVisible: "••••••••"

- tapOn: "Confirm Password"
- eraseText
- inputText: "heymaxtest01"
- assertVisible: "••••••••••"

- waitForAnimationToEnd
- assertVisible: "Sign Up"
- assertNotVisible: "Sign Up (disabled)"
- tapOn: "Sign Up"

- runFlow:
    when:
      visible: "Passwords don't match"
    commands:
      - pressKey: HOME
      - waitForAnimationToEnd

# **Sign Up with Short Password**
- tapOn: "HeyMax"
- tapOn: 60%,30%
- tapOn: "Sign Up"

- runFlow:
    when:
      visible: "Password must be at least X characters"
    commands:
      - pressKey: HOME
      - waitForAnimationToEnd
