appId: com.max.heymax

---
# Run the JavaScript file to load element locators
- runScript: ../pages/login.js

# Launch the application
- tapOn: ${output.login.appTitle}

# Wait for and tap the "Log in" button
- extendedWaitUntil:
    visible: ${output.login.loginButton}
- tapOn: ${output.login.loginButton}

# Wait for and input the email
- extendedWaitUntil:
    visible: ${output.login.emailField}
- tapOn: ${output.login.emailField}
- inputText: "sowmiya@qaoncloud.com"
- hideKeyboard

# Wait for and input the password
- extendedWaitUntil:
    visible: ${output.login.passwordField}
- tapOn: ${output.login.passwordField}
- inputText: "sowmiya23"
- hideKeyboard

# Tap on the final "Log in" button
- extendedWaitUntil:
    visible: ${output.login.loginButton}
- tapOn:
    text: ${output.login.loginButton}
    index: 1  # To ensure correct selection
